--- a/CompanyPrinter/CompanyPrinter.csproj
+++ b/CompanyPrinter/CompanyPrinter.csproj
@@ -78,7 +78,7 @@
     <Content Include="Images\add.png" />
     <Content Include="Images\edit.png" />
     <Content Include="Login.aspx" />
-    <Content Include="Printers.aspx" />
+    <Content Include="Printer.aspx" />
     <Content Include="UpdateUser.aspx" />
     <Content Include="Users.aspx" />
     <Content Include="Web.config" />
@@ -99,12 +99,19 @@
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Printers.aspx.cs">
-      <DependentUpon>Printers.aspx</DependentUpon>
+    <Compile Include="MasterPage.Master.cs">
+      <DependentUpon>MasterPage.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Printers.aspx.designer.cs">
-      <DependentUpon>Printers.aspx</DependentUpon>
+    <Compile Include="MasterPage.Master.designer.cs">
+      <DependentUpon>MasterPage.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Printer.aspx.cs">
+      <DependentUpon>Printer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Printer.aspx.designer.cs">
+      <DependentUpon>Printer.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CreateUser.aspx.cs">
@@ -130,6 +137,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="MasterPage.Master" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
