--- a/CompanyPrinter/Web.config
+++ b/CompanyPrinter/Web.config
@@ -9,7 +9,9 @@
     <add name="CompanyPrinterDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=CompanyPrinters;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
-	  
+	  <httpHandlers>
+		  <add path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" verb="*" validate="false" />
+	  </httpHandlers>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
@@ -43,6 +45,9 @@
     </roleManager>
   </system.web>
   <system.webServer>
-	
+	  <validation validateIntegratedModeConfiguration="false" />
+	  <handlers>
+		  <add name="Telerik_Web_UI_WebResource_axd" verb="*" preCondition="integratedMode" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" />
+	  </handlers>
   </system.webServer>
 </configuration>
