--- a/CompanyPrinter/CompanyPrinter.csproj
+++ b/CompanyPrinter/CompanyPrinter.csproj
@@ -83,6 +83,7 @@
     <Content Include="Users.aspx" />
     <Content Include="Web.config" />
     <Content Include="CreateUser.aspx" />
+    <Content Include="WebForm2.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Designation.aspx.cs">
@@ -134,6 +135,13 @@
     </Compile>
     <Compile Include="Users.aspx.designer.cs">
       <DependentUpon>Users.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm2.aspx.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm2.aspx.designer.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
