--- a/CompanyPrinter/CompanyPrinter.csproj
+++ b/CompanyPrinter/CompanyPrinter.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Designation.aspx" />
+    <Content Include="Desinations.aspx" />
     <Content Include="Images\delete.png" />
     <Content Include="Images\add.png" />
     <Content Include="Images\edit.png" />
@@ -93,6 +94,13 @@
     </Compile>
     <Compile Include="Designation.aspx.designer.cs">
       <DependentUpon>Designation.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Desinations.aspx.cs">
+      <DependentUpon>Desinations.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Desinations.aspx.designer.cs">
+      <DependentUpon>Desinations.aspx</DependentUpon>
     </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
