--- a/CompanyPrinter/Web.config
+++ b/CompanyPrinter/Web.config
@@ -12,7 +12,7 @@
 	  <httpHandlers>
 		  <add path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" verb="*" validate="false" />
 	  </httpHandlers>
-    <compilation debug="true" targetFramework="4.0">
+    <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
         <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
@@ -21,8 +21,13 @@
         <add assembly="System.Speech, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
     </compilation>
+     <pages validateRequest="false" controlRenderingCompatibilityVersion="4.0">
+      <controls>
+        <add tagPrefix="telerik" assembly="Telerik.Web.UI" namespace="Telerik.Web.UI" />
+      </controls>
+    </pages>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login.aspx" timeout="2880"/>
+      <forms loginUrl="~/Login.aspx" timeout="2880"/>
     </authentication>
     <membership>
       <providers>
