--- a/CompanyPrinter/Web.config
+++ b/CompanyPrinter/Web.config
@@ -9,9 +9,9 @@
     <add name="CompanyPrinterDB" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=CompanyPrinters;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
-	  <httpHandlers>
-		  <add path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" verb="*" validate="false" />
-	  </httpHandlers>
+    <httpHandlers>
+      <add path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" verb="*" validate="false"/>
+    </httpHandlers>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
@@ -19,11 +19,12 @@
         <add assembly="System.Management, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
         <add assembly="PresentationCore, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
         <add assembly="System.Speech, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
+        <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
     </compilation>
-     <pages validateRequest="false" controlRenderingCompatibilityVersion="4.0">
+    <pages validateRequest="false" controlRenderingCompatibilityVersion="4.0">
       <controls>
-        <add tagPrefix="telerik" assembly="Telerik.Web.UI" namespace="Telerik.Web.UI" />
+        <add tagPrefix="telerik" assembly="Telerik.Web.UI" namespace="Telerik.Web.UI"/>
       </controls>
     </pages>
     <authentication mode="Forms">
@@ -50,9 +51,9 @@
     </roleManager>
   </system.web>
   <system.webServer>
-	  <validation validateIntegratedModeConfiguration="false" />
-	  <handlers>
-		  <add name="Telerik_Web_UI_WebResource_axd" verb="*" preCondition="integratedMode" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource" />
-	  </handlers>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <handlers>
+      <add name="Telerik_Web_UI_WebResource_axd" verb="*" preCondition="integratedMode" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource"/>
+    </handlers>
   </system.webServer>
 </configuration>
