--- a/CompanyPrinter/CompanyPrinter.csproj
+++ b/CompanyPrinter/CompanyPrinter.csproj
@@ -162,6 +162,7 @@
     <Content Include="Images\delete.png" />
     <Content Include="Images\add.png" />
     <Content Include="Images\edit.png" />
+    <Content Include="Images\profile.png" />
     <Content Include="Login.aspx" />
     <Content Include="Map.js" />
     <Content Include="NewReport.aspx" />
@@ -313,6 +314,12 @@
       <DependentUpon>userProfile02.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="UserProfiles.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UserProfiles.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="userReport01.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -346,6 +353,10 @@
     <EmbeddedResource Include="userProfile02.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>userProfile02.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserProfiles.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>UserProfiles.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="userReport01.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
